--- a/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Shared/NavMenu.razor
+++ b/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Shared/NavMenu.razor
@@ -12,9 +12,22 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="geolocation">
+                <span class="oi oi-plus" aria-hidden="true"></span> Geolocation
+            </NavLink>
+        </li>
+        
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="indexeddb">
                 <span class="oi oi-plus" aria-hidden="true"></span> Indexed DB
+            </NavLink>
+        </li>
+        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="web-storage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Web Storage
             </NavLink>
         </li>
     </ul>
