--- a/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Pages/IndexedDb.razor
+++ b/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Pages/IndexedDb.razor
@@ -5,13 +5,13 @@
 
 <div class="row">
 <div class="col-sm-6 p-3 border rounded">
-	<h3>To Do List (1. GetAll)</h3>
+	<h3>To Do List (GetAll)</h3>
 
 	<EditForm Model="toDo">
 	<div class="form-group border p-3">
 		<InputText @bind-Value="@toDo.Name" class="form-control" />
 	</div>
-	<div><button type="button" class="btn btn-primary" @onclick="SaveToDoAsync">Save (2. Put)</button></div>
+	<div><button type="button" class="btn btn-primary" @onclick="SaveToDoAsync">Save (Put)</button></div>
 	</EditForm>
 
 	@if (toDos?.Count > 0)
@@ -20,8 +20,8 @@
 			@foreach (var item in toDos)
 			{
 				<li class="@(item.IsCompleted == 1 ? "text-decoration-line-through" : "")">@item.Id @item.Name
-					<button type="button" class="btn btn-outline-primary" @onclick="@(() => ViewToDoAsync(item))">View (3. GetByKey)</button>
-					<button type="button" class="btn btn-outline-danger ml-2" @onclick="@(() => DeleteToDoAsync(item))">4. DeleteByKey</button>
+					<button type="button" class="btn btn-outline-primary" @onclick="@(() => ViewToDoAsync(item))">View (GetByKey)</button>
+					<button type="button" class="btn btn-outline-danger ml-2" @onclick="@(() => DeleteToDoAsync(item))">DeleteByKey</button>
 					@if (item.IsCompleted != 1)
 					{
 						<button type="button" class="btn btn-outline-warning ml-2" @onclick="@(() => MarkAsDoneAsync(item))">Done</button>
@@ -32,13 +32,13 @@
 	}
 
 	<div>
-		 <button type="button" class="btn btn-outline-primary" @onclick="@GetToDoCountAsync">5. Count</button>
+		 <button type="button" class="btn btn-outline-primary" @onclick="@GetToDoCountAsync">Count</button>
 		 <label>Count: @toDoCount</label>
 	</div>
     <div>
-        <button type="button" class="btn btn-outline-danger" @onclick="@ClearToDosAsync">6. Clear</button>
-        <button type="button" class="btn btn-outline-primary" @onclick="@GetPendingToDosAsync">7. Get Not Completed Ones Only (GetAllByIndexValue)</button>
-        <button type="button" class="btn btn-outline-info" @onclick="GetAllInKeyRangeAsync">8. Show all with Id &le;= 3</button>
+        <button type="button" class="btn btn-outline-danger" @onclick="@ClearToDosAsync">Clear</button>
+        <button type="button" class="btn btn-outline-primary" @onclick="@GetPendingToDosAsync">Get Not Completed Ones Only (GetAllByIndexValue)</button>
+        <button type="button" class="btn btn-outline-info" @onclick="GetAllInKeyRangeAsync">Show all with Id &le;= 3</button>
     </div>
 </div>
 
@@ -51,13 +51,13 @@
 	}
 	else
 	{
-	<h3>Tasks (9. Store&lt;T&gt;)</h3>
+	<h3>Tasks (Store&lt;T&gt;)</h3>
 
 	<EditForm Model="task">
 	<div class="form-group border p-3">
 		<InputText @bind-Value="@task.Name" class="form-control" />
 	</div>
-	<div><button type="button" class="btn btn-primary" @onclick="AddTaskAsync">Save (2. Put)</button></div>
+	<div><button type="button" class="btn btn-primary" @onclick="AddTaskAsync">Save (Put)</button></div>
 	</EditForm>
 
 	@if (tasks?.Count > 0)
@@ -71,4 +71,29 @@
 	}	
 	}
 </div>
+</div>
+
+<div>
+    <button type="button" class="btn btn-primary" @onclick="RunTestsAsync">Run Tests</button>
+
+    @if (testItems != null)
+    {
+		<ul>
+			@foreach (var item in testItems)
+			{
+            <li>
+                @if (item.Passed)
+                {
+                    <span class="text-success pe-1">&#10004;</span>
+                }
+                else
+                {
+                    <span class="text-danger pe-1">&#10008;</span>
+                }
+
+                @item.Name
+            </li>
+			}
+		</ul>
+    }
 </div>
