--- a/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Shared/NavMenu.razor
+++ b/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Shared/NavMenu.razor
@@ -15,19 +15,19 @@
         
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="geolocation">
-                <span class="oi oi-plus" aria-hidden="true"></span> Geolocation
+                <span class="oi oi-location" aria-hidden="true"></span> Geolocation
             </NavLink>
         </li>
         
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="indexeddb">
-                <span class="oi oi-plus" aria-hidden="true"></span> Indexed DB
+                <span class="oi oi-list" aria-hidden="true"></span> Indexed DB
             </NavLink>
         </li>
         
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="web-storage">
-                <span class="oi oi-plus" aria-hidden="true"></span> Web Storage
+                <span class="oi oi-box" aria-hidden="true"></span> Web Storage
             </NavLink>
         </li>
     </ul>
