--- a/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Shared/NavMenu.razor
+++ b/Cutec.Blazor.WebAPIs.WebAssemblyDemo/Shared/NavMenu.razor
@@ -14,13 +14,13 @@
         </li>
         
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="geolocation">
+            <NavLink class="nav-link" href="geolocation-demo">
                 <span class="oi oi-location" aria-hidden="true"></span> Geolocation
             </NavLink>
         </li>
         
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="indexeddb">
+            <NavLink class="nav-link" href="indexeddb-demo">
                 <span class="oi oi-list" aria-hidden="true"></span> Indexed DB
             </NavLink>
         </li>
